--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Sección principal -->
   <section class="full-screen intro">
     <div class="content logos">
-      <img src="/html5/img/logo empresa.png" alt="Raven Safety Mazatlán" class="logo">
+      <img src="/img/logo empresa.png" alt="Raven Safety Mazatlán" class="logo">
       <h1>Raven Safety Mazatlán</h1>
       <p>Protegiendo lo que más importa</p>
       <button id="whatsappBtn">Contactar por WhatsApp</button>
@@ -46,9 +46,9 @@
       <h2>Trabajos Realizados</h2>
       <div class="galeria">
         <!-- Aquí puedes insertar tus fotos hechas -->
-        <img src="/html5/img/trabajo 1.jpg" alt="Trabajo realizado 1">
-        <img src="/html5/img/trabajo 2.jpg" alt="Trabajo realizado 2">
-        <img src="/html5/img/trabajo 3.jpg" alt="Trabajo realizado 3">
+        <img src="/img/trabajo 1.jpg" alt="Trabajo realizado 1">
+        <img src="/img/trabajo 2.jpg" alt="Trabajo realizado 2">
+        <img src="/img/trabajo 3.jpg" alt="Trabajo realizado 3">
       </div>
     </div>
   </section>
@@ -58,11 +58,11 @@
     <div class="content">
       <h2>Marcas que manejamos</h2>
       <div class="logos">
-        <img src="/html5/img/Hikvision-Logo.wine.png" alt="Hikvision">
-        <img src="/html5/img/TPLINK_Logo_2.svg.png" alt="TP-Link">
-        <img src="/html5/img/panduit-logo-png-transparent.png" alt="Panduit">
-        <img src="/html5/img/Ubiquiti_Logo.png" alt="Ubiquiti">
-        <img src="/html5/img/LeHHSBM6_400x400.jpg" alt="Epcom">
+        <img src="/img/Hikvision-Logo.wine.png" alt="Hikvision">
+        <img src="/img/TPLINK_Logo_2.svg.png" alt="TP-Link">
+        <img src="/img/panduit-logo-png-transparent.png" alt="Panduit">
+        <img src="/img/Ubiquiti_Logo.png" alt="Ubiquiti">
+        <img src="/img/LeHHSBM6_400x400.jpg" alt="Epcom">
       </div>
     </div>
   </section>
@@ -75,3 +75,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
