--- a/index.html
+++ b/index.html
@@ -72,8 +72,14 @@
     <p>© 2025 Raven Safety Mazatlán - Todos los derechos reservados</p>
   </footer>
 
+  <!-- Modal para imagen -->
+<div class="modal" id="imageModal">
+  <img id="modalImg" src="" alt="Imagen ampliada">
+</div>
+
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
